Added functionality: json upload to Analysis and added import to plotter.py to help macs run

--- a/frontend/src/styles/Analysis-Report.css
+++ b/frontend/src/styles/Analysis-Report.css
@@ -11,3 +11,26 @@
 .error {
     color: white;
 }
+
+.text-white {
+    color: white;
+  }
+  
+  .filename {
+    font-weight: bold;
+    color: white;
+  }
+  
+  .file-status {
+    margin-top: 10px;
+    font-size: 14px;
+    font-weight: normal;
+  }
+
+  .plot-image {
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin-top: 20px;
+  }
+  
